--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,8 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
-    "mapbox-gl": "^3.11.0",
-    "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "tailwind-merge": "^3.2.0",
+    "mapbox-gl": "^3.11.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
