--- a/backend/node trip server/package.json
+++ b/backend/node trip server/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-cache": "^5.1.2"
   }
 }
