--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.21",
